fix: Detail alignment issues

--- a/src/css/_field-cell.scss
+++ b/src/css/_field-cell.scss
@@ -19,11 +19,6 @@
     @include path-tag;
   }
 
-  &.count,
-  &.duration {
-    text-align: right;
-  }
-
   &.null {
     color: $white-6;
   }
